--- a/github_workflow/unit_test.yml
+++ b/github_workflow/unit_test.yml
@@ -1,1 +1,19 @@
 
+  
+name: Unit Testing
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: make
+      run: make -C 3_Implementation/ test/test_calendar.c
